<resources>
    <string name="app_name">Fondo de pantalla</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="desarrollador">Desarrolado Por : Lucas Bazàn</string>


    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Lista de administradores</string>
    <string name="Salir">Cerrar sesión</string>


    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>
    <string name="MasOpcionestxt">Más opciones</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="Compartir">Compartir</string>
    <string name="Administrador">Administrador</string>

    <string name="Acceder">Acceder</string>


    <string name="RegistroTXT">Registro de administradores</string>
    <string name="Correo">Correo electronico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombre">Nombre completos</string>
    <string name="Apellido">Apellidos completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha De Registro</string>
    <string name="Registrar">Registrar</string>


    <string name="LoginTXT">Login de Administradores</string>
    <string name="Ingresar">Ingresar</string>

    <string name="fechaAdmin"> -- </string>
    <string name="BienvenidoTXT">Bienvenido(a): </string>
    <string name="NombreTXT"> -- </string>
    <string name="Eligeunacategoriatxt">Elige una Categoria</string>
    <string name="Peliculas">PELICULAS</string>
    <string name="Series">SERIES</string>
    <string name="Musica">MUSICA</string>
    <string name="Videojuegos">VIDEOJUEGOS</string>

    <string name="Agregar">Agregar</string>
    <string name="Vista">Vista</string>


    <string name="IdPeliculas"> -- </string>
    <string name="NombreTXTPeliculas">Nombre de imagen</string>
    <string name="NombrePeliculas">Escriba nombre aqui</string>
    <string name="VistaPeliculas">0</string>
    <string name="PublicarPelicula">Publicar</string>


    <string name="NombreImagenPelicula"> -- </string>
    <string name="VistaPelicula"> -- </string>

    <string name="IdSerie"> -- </string>
    <string name="NombreTXTSerie">Nombre de imagen</string>
    <string name="NombreSerie">Escriba nombre aqui</string>
    <string name="VistaSerie">0</string>
    <string name="PublicarSerie">Publicar</string>

    <string name="NombreImagen_Serie"> -- </string>
    <string name="Vista_Serie"> -- </string>

    <string name="IdMusica"> -- </string>
    <string name="NombreTXTMusica">Nombre de imagen</string>
    <string name="NombreMusica">Escriba nombre aqui</string>
    <string name="VistaMusica">0</string>
    <string name="PublicarMusica">Publicar</string>

    <string name="NombreImagen_Musica"> -- </string>
    <string name="Vista_Musica"> -- </string>

    <string name="IdVideojuegos"> -- </string>
    <string name="NombreTXTVideojuegos">Nombre de imagen</string>
    <string name="NombreVideojuegos">Escriba nombre aqui</string>
    <string name="VistaVideojuegos">0</string>
    <string name="PublicarVideojuegos">Publicar</string>

    <string name="NombreImagen_VideoJuegos"> -- </string>
    <string name="Vista_VideoJuegos"> -- </string>


    <string name="OrdenarTXT">Ordenar en:</string>
    <string name="Dos_Columnas">2 Columnas</string>
    <string name="Tres_Columnas">3 Columnas</string>

    <string name="PERFILADMINISTRADORTXT">MI PERFIL</string>
    <string name="MIINFORMACIONTXT">MI INFORMACIÓN</string>
    <string name="UIDPERFILTXT">Uid: </string>
    <string name="UIDPERFIL"> -- </string>
    <string name="NOMBRESPERFILTXT">Nombres: </string>
    <string name="NOMBRESPERFIL"> -- </string>
    <string name="APELLIDOSPERFILTXT">Apellidos: </string>
    <string name="APELLIDOSPERFIL"> -- </string>
    <string name="CORREOPERFILTXT">Correo: </string>
    <string name="CORREOPERFIL"> -- </string>
    <string name="PASSWORDPERFILTXT">Password: </string>
    <string name="PASSWORDPERFIL"> -- </string>
    <string name="EDADPERFILTXT">Edad: </string>
    <string name="EDADPERFIL"> -- </string>
    <string name="ACTUALIZARPASS">Actualizar password</string>
    <string name="ACTUALIZARDATOS">Actualizar Datos</string>

    <string name="MisCredencialesTXT">Mis Credenciales</string>
    <string name="PassActualTXT">Contraseña actual:</string>
    <string name="PassActual"> -- </string>
    <string name="ActualPassET">Contraseña Actual</string>
    <string name="NuevoPassET">Nueva Contraseña</string>
    <string name="CAMBIARPASSBTN">CAMBIAR CONTRASEÑA</string>
    <string name="IRINICIONBTN">IR INICIO</string>
    <string name="NOTATXT">Nota: Si cambia la contraseña, se cerrará sesión automaticamente</string>


    <string name="NombresADMIN">Nombres</string>
    <string name="CorreoADMIN">Correo Electronico </string>


    <string name="buscar_administrador">Buscar</string>


    <string name="DetalleTXT">Detalle del Administrador</string>
    <string name="UidDetalleAdmin">UID</string>
    <string name="NombresDetalleAdmin">NOMBRES</string>
    <string name="ApellidosDetalleAdmin">APELLIDOS</string>
    <string name="CorreoDetalleAdmin">CORREO</string>
    <string name="EdadDetalleAdmin">EDAD</string>


    <string name="NombreCategoriaD"> -- </string>
    <string name="CategoriasTXT">Categorias</string>
    <string name="MasCategoriasTXT">Más Categorias</string>
    <string name="NombreCategoriaF"> -- </string>

    <string name="InfoTXT">Disfruta de nuestra app</string>

    <string name="NombreImg_Cat_Elegida"> -- </string>
    <string name="Vista_Img_Cat_Elegida"> -- </string>


    <string name="NombreImagenTXT">Nombre de imagen</string>
    <string name="NombreImagenDetalle"> -- </string>
    <string name="VisualizacionTXT">Visualizaciones</string>
    <string name="VistaDetalle"> -- </string>


    <string name="TItuloinformativoTXT"> -- </string>


    <string name="fecha"> -- </string>

    <string name="AcercaDeApp">Acerca De</string>
    <string name="InfoDesarrollador">Desarrollado por : Lucas Bazan</string>
    <string name="InfoCorreo">Correo: bazanlucas684@gmail.com</string>
    <string name="InfoVersion">Version 1.0</string>
    <string name="Ir_website">Pagina web</string>
    <string name="Ir_facebook">Facebook</string>
    <string name="Ir_instagram">Instagram</string>
    <string name="Ir_youtube">Youtube</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>