<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentosCliente.AcerDeCliente">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:text="@string/AcercaDe"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#1F618D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:text="@string/InfoDesarrollador"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:text="@string/InfoCorreo"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/InfoVersion"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>