<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".CategoriasAdmin.VideoJuegosA.AgregarVideojuegos">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/NombreTXTVideojuegos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/IdVideojuegos"
                android:text="@string/IdVideojuegos"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/NombreVideojuegos"
                android:hint="@string/NombreVideojuegos"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@drawable/vista_ico"/>


                <TextView
                    android:id="@+id/VistaVideojuegos"
                    android:text="@string/VistaVideojuegos"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ImagenAgregarVideojuegos"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/imagen_ico"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>


        <Button
            android:id="@+id/PublicarVideojuegos"
            android:text="@string/PublicarVideojuegos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_personalizado"
            android:textColor="#fff"
            android:layout_marginTop="10dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>