<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".FragmentosCliente.InicioCliente">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/calendar_ico"/>

                <TextView
                    android:id="@+id/fecha"
                    android:text="@string/fecha"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:text="@string/CategoriasTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:textSize="20sp"
                android:textColor="#000"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCategoriasD"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="250dp"/>


            <TextView
                android:text="@string/MasCategoriasTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textColor="#000"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCategoriasF"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="250dp"/>

            <TextView
                android:text="@string/InfoTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textColor="#000"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewInfo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

</ScrollView>